created list for recipe links

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a>Lasagna</a>
+        <ul>
+            <li>
+                <a href = "./recipes/lasanga.html">Lasagna</a>
+            </li>
+            <li>
+                <a href = "./recipes/">Loaded Mashed Potatoes</a>
+            </li>
+        </ul>
     </body>
 </html>
